fix html elements

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <div id="cont-input" class="cont-input-color">
                         <input aria-label="Pick a Background Color" class="background-input" id="img-color" type="color"
                             value="#191E2B" />
-                        <label class="text-background-color" id="text-input-color" for="img-color">#191E2B</span>
+                        <label class="text-background-color" id="text-input-color" for="img-color">#191E2B</label>
                     </div>
-                    <select title="Select a color filter from the list" class="input-style" name=""
+                    <select title="Select a color filter from the list" class="input-style" name="idFilterColor"
                         id="options-filter-bg">
                         <option value="unset">None</option>
                         <option value="lighten">Light</option>
